Corrected .gitignore - again.

--- a/.gitignore
+++ b/.gitignore
@@ -1,35 +1,2 @@
-# Ignore file for Visual Studio 2008
-
-# use glob syntax
 syntax: glob
-
-# Ignore Visual Studio 2008 files
-*.csproj.orig
-*.obj
-*.pdb
-*.user
-*.aps
-*.pch
-*.vspscc
-*_i.c
-*_p.c
-*.ncb
-*.suo
-*.tlb
-*.tlh
-*.bak
-*.cache
-*.ilk
-*.log
-*.lib
-*.sbr
-*.scc
-*.cs.orig
-[Bb]in
-[Db]ebug*/
-obj/
-[Rr]elease*/
-_ReSharper*/
-[Tt]est[Rr]esult*
-[Bb]uild[Ll]og.*
-*.[Pp]ublish.xml
+build/Ninject.ServiceLocator.1.0.nupkg
